Fixed CSS a bit so that it looks a bit more like what we want. Tried to wrap both the side and newsfeed divs into another div for better positioning but didn't figure it out yet, so work on that?

--- a/fudo/public/stylesheets/base.css
+++ b/fudo/public/stylesheets/base.css
@@ -36,3 +36,9 @@ img.sonde {
 a:hover {
     cursor: pointer;
 }
+
+/*div.main {
+    width: 80%;
+    margin: auto;
+    background-color: skyblue;
+}*/
