--- a/fudo/public/stylesheets/navbar.css
+++ b/fudo/public/stylesheets/navbar.css
@@ -1,12 +1,18 @@
 div.navbar {
 	/*position: absolute;*/
-    margin: 5px;
     background-color: rgba(255, 255, 255, .75);
-    border-radius: 5px;
 }
 
 div.navbar h1 {
 	font-size: 1.5em;
 	padding: .25em;
 	display: inline-block;
+}
+
+div.navbar ul {
+	float: right;
+}
+
+div.navbar li {
+	margin: 10px;
 }
