--- a/fudo/public/stylesheets/post.css
+++ b/fudo/public/stylesheets/post.css
@@ -1,6 +1,5 @@
 div.post {
-    background-color: skyblue;
     border-radius: 5px;
-    padding: 10px;
-    margin: 10px;
+    padding: 20px;
+    border-bottom: 2px dotted black;
 }
